# study_miniscience

./: .gitignore  README.md
2021/01_meshes/cpp/: Makefile  sample01.cpp  sample02.cpp  sample03.cpp
2021/02_vtk/cpp/: CMakeLists.txt  tetr3d.cpp
2021/02_vtk/python/: cubic2d.py
Solutions/01_meshes/: CMakeLists.txt  Makefile  stage0.cpp  stage1.cpp  stage2.cpp  test_geometry.stl
Solutions/02_vtk/: CMakeLists.txt  README.md  anifish.cpp  lab.py
Solutions/03_fenics/: gmsh_converter.py  poisson.py
Solutions/03_fenics/fish_mesh/: CMakeLists.txt  main.cpp
Solutions/03_fenics/hyperelasticity/: main.cpp
Solutions/microproject/: skyrmion.py
